agregando Rutas-Controladores

--- a/site/package.json
+++ b/site/package.json
@@ -5,12 +5,13 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js",
-    "dev": "nodemon -e js,json,html,css app.js"
+    "start": "node src/app.js",
+    "dev": "nodemon -e js,json,html,css,ejs src/app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^3.1.5",
     "express": "^4.17.1"
   },
   "devDependencies": {
