--- a/site/package.json
+++ b/site/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "method-override": "^3.0.0",
     "multer": "^1.4.2",
     "path": "^0.12.7"
   },
