--- a/site/package.json
+++ b/site/package.json
@@ -18,7 +18,9 @@
     "express-session": "^1.17.1",
     "method-override": "^3.0.0",
     "multer": "^1.4.2",
-    "path": "^0.12.7"
+    "mysql2": "^2.2.5",
+    "path": "^0.12.7",
+    "sequelize": "^6.5.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
